k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-notes
  template:
    metadata:
      labels:
        app: django-notes
    spec:
      containers:
      - name: django
        image: django-notes:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
