k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: ClusterIP
  selector:
    app: django-notes
  ports:
  - port: 80
    targetPort: 8000
